# mcp-viacep

./: .env  .gitignore  README.md  pyproject.toml
.amazonq/agents/: default.json
mcp_viacep/: server.py
